
#
# Copyright (C) 1994-2018 Altair Engineering, Inc.
# For more information, contact Altair at www.altair.com.
#
# This file is part of the PBS Professional ("PBS Pro") software.
#
# Open Source License Information:
#
# PBS Pro is free software. You can redistribute it and/or modify it under the
# terms of the GNU Affero General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# PBS Pro is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.
# See the GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# Commercial License Information:
#
# For a copy of the commercial license terms and conditions,
# go to: (http://www.pbspro.com/UserArea/agreement.html)
# or contact the Altair Legal Department.
#
# Altair’s dual-license business model allows companies, individuals, and
# organizations to create proprietary derivative works of PBS Pro and
# distribute them - whether embedded or bundled with other software -
# under a commercial license agreement.
#
# Use of Altair’s trademarks, including but not limited to "PBS™",
# "PBS Professional®", and "PBS Pro™" and Altair’s logos is subject to Altair's
# trademark licensing policies.
#

notrans_dist_man1_MANS = \
	man1/nqs2pbs.1B \
	man1/pbsdsh.1B \
	man1/pbs_python.1B \
	man1/pbs_ralter.1B \
	man1/pbs_rdel.1B \
	man1/pbs_release_nodes.1B \
	man1/pbs_rstat.1B \
	man1/pbs_rsub.1B \
	man1/qalter.1B \
	man1/qdel.1B \
	man1/qhold.1B \
	man1/qmove.1B \
	man1/qmsg.1B \
	man1/qorder.1B \
	man1/qrerun.1B \
	man1/qrls.1B \
	man1/qselect.1B \
	man1/qsig.1B \
	man1/qstat.1B \
	man1/qsub.1B

notrans_dist_man3_MANS = \
	man3/pbs_alterjob.3B \
	man3/pbs_connect.3B \
	man3/pbs_default.3B \
	man3/pbs_deljob.3B \
	man3/pbs_delresv.3B \
	man3/pbs_disconnect.3B \
	man3/pbs_geterrmsg.3B \
	man3/pbs_holdjob.3B \
	man3/pbs_locjob.3B \
	man3/pbs_manager.3B \
	man3/pbs_modify_resv.3B \
	man3/pbs_movejob.3B \
	man3/pbs_msgjob.3B \
	man3/pbs_orderjob.3B \
	man3/pbs_rerunjob.3B \
	man3/pbs_rescreserve.3B \
	man3/pbs_relnodesjob.3B \
	man3/pbs_rlsjob.3B \
	man3/pbs_runjob.3B \
	man3/pbs_selectjob.3B \
	man3/pbs_selstat.3B \
	man3/pbs_sigjob.3B \
	man3/pbs_stagein.3B \
	man3/pbs_statfree.3B \
	man3/pbs_stathook.3B \
	man3/pbs_statjob.3B \
	man3/pbs_statnode.3B \
	man3/pbs_statque.3B \
	man3/pbs_statresv.3B \
	man3/pbs_statrsc.3B \
	man3/pbs_statsched.3B \
	man3/pbs_statserver.3B \
	man3/pbs_submit.3B \
	man3/pbs_submit_resv.3B \
	man3/pbs_tclapi.3B \
	man3/pbs_terminate.3B \
	man3/rm.3B \
	man3/rpp.3 \
	man3/tm.3

noinst_man3_MANS = \
	man3/pbs_rescquery.3B \
	man3/pbs_submitresv.3B

notrans_dist_man7_MANS = \
	man1/pbs_hook_attributes.7B \
	man1/pbs_job_attributes.7B \
	man1/pbs_module.7B \
	man1/pbs_node_attributes.7B \
	man1/pbs_professional.7B \
	man1/pbs_queue_attributes.7B \
	man1/pbs_resources.7B \
	man1/pbs_resv_attributes.7B \
	man1/pbs_sched_attributes.7B \
	man1/pbs_server_attributes.7B

notrans_dist_man8_MANS = \
	man8/mpiexec.8B \
	man8/pbs.8B \
	man8/pbs_account.8B \
	man8/pbs_attach.8B \
	man8/pbs_comm.8B \
	man8/pbs.conf.8B \
	man8/pbs_dataservice.8B \
	man8/pbs_diag.8B \
	man8/pbs_ds_password.8B \
	man8/pbsfs.8B \
	man8/pbs_hostn.8B \
	man8/pbs_idled.8B \
	man8/pbs_iff.8B \
	man8/pbs_interactive.8B \
	man8/pbs_lamboot.8B \
	man8/pbs_migrate_users.8B \
	man8/pbs_migration_assistant.bat.8B \
	man8/pbs_mkdirs.8B \
	man8/pbs_mom.8B \
	man8/pbs_mpihp.8B \
	man8/pbs_mpilam.8B \
	man8/pbs_mpirun.8B \
	man8/pbsnodes.8B \
	man8/pbs_password.8B \
	man8/pbs_probe.8B \
	man8/pbsrun.8B \
	man8/pbsrun_unwrap.8B \
	man8/pbsrun_wrap.8B \
	man8/pbs_sched.8B \
	man8/pbs_server.8B \
	man8/pbs_snapshot.8B \
	man8/pbs_tclsh.8B \
	man8/pbs_tmrsh.8B \
	man8/pbs_topologyinfo.8B \
	man8/pbs_wish.8B \
	man8/printjob.8B \
	man8/qdisable.8B \
	man8/qenable.8B \
	man8/qmgr.8B \
	man8/qrun.8B \
	man8/qstart.8B \
	man8/qstop.8B \
	man8/qterm.8B \
	man8/tracejob.8B \
	man8/win_postinstall.py.8B

