
#
# Copyright (C) 1994-2020 Altair Engineering, Inc.
# For more information, contact Altair at www.altair.com.
#
# This file is part of the PBS Professional ("PBS Pro") software.
#
# Open Source License Information:
#
# PBS Pro is free software. You can redistribute it and/or modify it under the
# terms of the GNU Affero General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# PBS Pro is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.
# See the GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# Commercial License Information:
#
# For a copy of the commercial license terms and conditions,
# go to: (http://www.pbspro.com/UserArea/agreement.html)
# or contact the Altair Legal Department.
#
# Altair’s dual-license business model allows companies, individuals, and
# organizations to create proprietary derivative works of PBS Pro and
# distribute them - whether embedded or bundled with other software -
# under a commercial license agreement.
#
# Use of Altair’s trademarks, including but not limited to "PBS™",
# "PBS Professional®", and "PBS Pro™" and Altair’s logos is subject to Altair's
# trademark licensing policies.
#

include_HEADERS = \
	pbs_error.h \
	pbs_ifl.h \
	rm.h \
	tm_.h \
	tm.h

noinst_HEADERS = \
	acct.h \
	auth.h \
	attribute.h \
	avltree.h \
	basil.h \
	batch_request.h \
	bitfield.h \
	cmds.h \
	credential.h \
	dis.h \
	grunt.h \
	hook_func.h \
	hook.h \
	ifl_internal.h \
	job.h \
	libpbs.h \
	libsec.h \
	libutil.h \
	limits_if.h \
	list_link.h \
	log.h \
	Long_.h \
	Long.h \
	Makefile.in \
	mom_func.h \
	mom_hook_func.h \
	mom_server.h \
	mom_vnode.h \
	net_connect.h \
	pbs_array_list.h \
	pbs_assert.h \
	pbs_client_thread.h \
	pbs_db.h \
	pbs_ecl.h \
	pbs_entlim.h \
	pbs_internal.h \
	pbs_reliable.h \
	pbs_json.h \
	pbs_license.h \
	pbs_mpp.h \
	pbs_mutex.h \
	pbs_nodes.h \
	pbs_python.h \
	pbs_python_private.h \
	pbs_share.h \
	pbs_undolr.h \
	pbs_version.h \
	placementsets.h \
	portability.h \
	port_forwarding.h \
	provision.h \
	qmgr.h \
	queue.h \
	reservation.h \
	resmon.h \
	resource.h \
	resv_node.h \
	rpp.h \
	sched_cmds.h \
	pbs_sched.h \
	server.h \
	server_limits.h \
	site_queue.h \
	site_job_attr_def.h \
	site_job_attr_enum.h \
	site_qmgr_node_print.h \
	site_qmgr_que_print.h \
	site_qmgr_sched_print.h \
	site_qmgr_svr_print.h \
	site_que_attr_def.h \
	site_que_attr_enum.h \
	site_resc_attr_def.h \
	site_resv_attr_def.h \
	site_resv_attr_enum.h \
	site_sched_attr_def.h \
	site_sched_attr_enum.h \
	site_svr_attr_def.h \
	site_svr_attr_enum.h \
	svrfunc.h \
	ticket.h \
	tracking.h \
	user.h \
	win.h \
	win_remote_shell.h \
	work_task.h
